syntax = "proto3";

option csharp_namespace = "MultiplicationService.Generated";

package proto;

service MultiplicationService
{
	rpc Multiply(NumberReq) returns (NumberRes){}
}

message NumberReq
{
	int32 number = 1;
}

message NumberRes
{
	int32 number = 1;
}

